--- a/www/index.html
+++ b/www/index.html
@@ -510,49 +510,53 @@
                                 <tr>
                                     <th>(a)</th>
                                     <td>you were so <ins>sad or depressed</ins> that you couldn't concentrate, had trouble eating or sleeping, or didn't want to do things you normally enjoy</td>
-                                    <td><input name="b1Op1" id="b1Op1" value="Past Week" type="radio">
+                                    <td id="1">
+                                        <input name="b1Op1" id="b1Op1" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op1" id="b1Op2" value="Past Year" type="radio">
+                                    <td id="2">
+                                        <input name="b1Op1" id="b1Op2" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op1" id="b1Op3" value="More than a year ago" type="radio">
+                                    <td id="3">
+                                        <input name="b1Op1" id="b1Op3" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op1" id="b1Op4" value="Never" type="radio">
+                                    <td id="4">
+                                        <input name="b1Op1" id="b1Op4" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(b)</th>
                                     <td>you were <ins>hyper or manic</ins>; that is, much more excited and full of energy than usual, your mind went too fast, and you did things that were unusual for you (for example, taking risks, spending too much money)</td>
-                                    <td><input name="b1Op2" id="b1Op5" value="Past Week" type="radio">
+                                    <td id="5"><input name="b1Op2" id="b1Op5" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op2" id="b1Op6" value="Past Year" type="radio">
+                                    <td id="6"><input name="b1Op2" id="b1Op6" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op2" id="b1Op7" value="More than a year ago" type="radio">
+                                    <td id="7"><input name="b1Op2" id="b1Op7" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op2" id="b1Op8" value="Never" type="radio">
+                                    <td id="8"><input name="b1Op2" id="b1Op8" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(c)</th>
                                     <td>you had <ins>insomnia</ins>, or problems falling asleep, staying asleep, or waking up too early</td>
-                                    <td><input name="b1Op3" id="b1Op9" value="Past Week" type="radio">
+                                    <td id="9"><input name="b1Op3" id="b1Op9" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op3" id="b1Op10" value="Past Year" type="radio">
+                                    <td id="10"><input name="b1Op3" id="b1Op10" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op3" id="b1Op11" value="More than a year ago" type="radio">
+                                    <td id="11"><input name="b1Op3" id="b1Op11" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op3" id="b1Op12" value="Never" type="radio">
+                                    <td id="12"><input name="b1Op3" id="b1Op12" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(d)</th>
                                     <td>you had repeated attacks <ins>of fear or panic</ins> when all of a sudden you felt very frightened, anxious, or uneasy </td>
-                                    <td><input name="b1Op4" id="b1Op13" value="Past Week" type="radio">
+                                    <td id="13"><input name="b1Op4" id="b1Op13" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op4" id="b1Op14" value="Past Year" type="radio">
+                                    <td id="14"><input name="b1Op4" id="b1Op14" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op4" id="b1Op15" value="More than a year ago" type="radio">
+                                    <td id="15"><input name="b1Op4" id="b1Op15" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op4" id="b1Op16" value="Never" type="radio">
+                                    <td id="16"><input name="b1Op4" id="b1Op16" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                             </tbody>
@@ -577,37 +581,37 @@
                                 <tr>
                                     <th>(e)</th>
                                     <td>you had repeated <ins>attacks of anger</ins> when all of a sudden you lost control and broke or smashed something, hit or tried to hurt someone, or threatened someone</td>
-                                    <td><input name="b1Op5" id="b1Op17" value="Past Week" type="radio">
+                                    <td id="17"><input name="b1Op5" id="b1Op17" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op5" id="b1Op18" value="Past Year" type="radio">
+                                    <td id="18"><input name="b1Op5" id="b1Op18" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op5" id="b1Op19" value="More than a year ago" type="radio">
+                                    <td id="19"><input name="b1Op5" id="b1Op19" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op5" id="b1Op20" value="Never" type="radio">
+                                    <td id="20"><input name="b1Op5" id="b1Op20" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(f)</th>
                                     <td><ins>after a traumatic experience</ins> you had frequent upsetting memories or dreams, felt jumpy, distant or depressed, and had trouble sleeping or concentrating (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience</i>)</td>
-                                    <td><input name="b1Op6" id="b1Op21" value="Past Week" type="radio">
+                                    <td id="21"><input name="b1Op6" id="b1Op21" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op6" id="b1Op22" value="Past Year" type="radio">
+                                    <td id="22"><input name="b1Op6" id="b1Op22" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op6" id="b1Op23" value="More than a year ago" type="radio">
+                                    <td id="23"><input name="b1Op6" id="b1Op23" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op6" id="b1Op24" value="Never" type="radio">
+                                    <td id="24"><input name="b1Op6" id="b1Op24" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(g)</th>
                                     <td>you were <ins>so agitated, anxious, or worried</ins> that you couldn't relax, sleep, or concentrate, and you couldn't function normally</td>
-                                    <td><input name="b1Op7" id="b1Op25" value="Past Week" type="radio">
+                                    <td id="25"><input name="b1Op7" id="b1Op25" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op7" id="b1Op26" value="Past Year" type="radio">
+                                    <td id="26"><input name="b1Op7" id="b1Op26" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op7" id="b1Op27" value="More than a year ago" type="radio">
+                                    <td id="27"><input name="b1Op7" id="b1Op27" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op7" id="b1Op28" value="Never" type="radio">
+                                    <td id="28"><input name="b1Op7" id="b1Op28" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                             </tbody>
@@ -632,37 +636,37 @@
                                 <tr>
                                     <th>(h)</th>
                                     <td>you <ins>used alcohol</ins> so much that you got in trouble at school/work or with family/friends, or your use was out of control</td>
-                                    <td><input name="b1Op8" id="b1Op29" value="Past Week" type="radio">
+                                    <td id="29"><input name="b1Op8" id="b1Op29" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op8" id="b1Op30" value="Past Year" type="radio">
+                                    <td id="30"><input name="b1Op8" id="b1Op30" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op8" id="b1Op31" value="More than a year ago" type="radio">
+                                    <td id="31"><input name="b1Op8" id="b1Op31" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op8" id="b1Op32" value="Never" type="radio">
+                                    <td id="32"><input name="b1Op8" id="b1Op32" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(i)</th>
                                     <td>you <ins>used drugs</ins> (for example, marijuana, cocaine, etc.) so much that you got in trouble at school/work or family/friends, or your use was out of control</td>
-                                    <td><input name="b1Op9" id="b1Op33" value="Past Week" type="radio">
+                                    <td id="33"><input name="b1Op9" id="b1Op33" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op9" id="b1Op34" value="Past Year" type="radio">
+                                    <td id="34"><input name="b1Op9" id="b1Op34" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op9" id="b1Op35" value="More than a year ago" type="radio">
+                                    <td id="35"><input name="b1Op9" id="b1Op35" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op9" id="b1Op36" value="Never" type="radio">
+                                    <td id="36"><input name="b1Op9" id="b1Op36" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                                 <tr>
                                     <th>(j)</th>
                                     <td>you had unusual experiences like<ins>seeing or hearing things</ins> that other people couldn't see or hear (<i>Do <ins>not</ins> include times that you were half-asleep or drinking alcohol or taking drugs.</i>)</td>
-                                    <td><input name="b1Op10" id="b1Op37" value="Past Week" type="radio">
+                                    <td id="37"><input name="b1Op10" id="b1Op37" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op10" id="b1Op38" value="Past Year" type="radio">
+                                    <td id="38"><input name="b1Op10" id="b1Op38" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op10" id="b1Op39" value="More than a year ago" type="radio">
+                                    <td id="39"><input name="b1Op10" id="b1Op39" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op10" id="b1Op40" value="Never" type="radio">
+                                    <td id="40"><input name="b1Op10" id="b1Op40" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                             </tbody>
@@ -687,13 +691,13 @@
                                 <tr>
                                     <th>(k)</th>
                                     <td>you had <ins>strange thoughts</ins> like believing your mind was being controlled by outside forces, that someone or something was sending you special signs (like through the TV), or someone or something was plotting to harm you</td>
-                                    <td><input name="b1Op11" id="b1Op41" value="Past Week" type="radio">
+                                    <td id="41"><input name="b1Op11" id="b1Op41" value="Past Week" type="radio">
                                     </td>
-                                    <td><input name="b1Op11" id="b1Op42" value="Past Year" type="radio">
+                                    <td id="42"><input name="b1Op11" id="b1Op42" value="Past Year" type="radio">
                                     </td>
-                                    <td><input name="b1Op11" id="b1Op43" value="More than a year ago" type="radio">
+                                    <td id="43"><input name="b1Op11" id="b1Op43" value="More than a year ago" type="radio">
                                     </td>
-                                    <td><input name="b1Op11" id="b1Op44" value="Never" type="radio">
+                                    <td id="44"><input name="b1Op11" id="b1Op44" value="Never" type="radio">
                                     </td>                            
                                 </tr>
                             </tbody>
