--- a/www/index.html
+++ b/www/index.html
@@ -143,7 +143,7 @@
                             <li>If you make a mistake, a red <span style="color:red">X</span> will appear.  Tap the other side of the screen to continue.</li>
                             <li><ins>GO AS FAST AS YOU CAN</ins> while making as few mistakes as possible!</li>
                         </ul>
-                        <a id="iBtn7" onclick="stIAT(12, 5)" class="ui-btn ui-corner-all">Start</a>
+                        <a id="iBtn7" onclick="stIAT(24, 5)" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="iBlk7" class="welBlk welBlk2 welBlk3">
                         <p><ins>Block 6 of 7</ins></p>
@@ -274,6 +274,9 @@
                             
                         </tbody>
                     </table>
+                    <br />
+                    <div id="iScr">
+                    </div>
                     <a id="iatBtn2" onclick="reset()" href="#home" class="ui-btn ui-corner-all">Main Menu</a>
                 </div>
             </div>
