--- a/www/index.html
+++ b/www/index.html
@@ -1207,7 +1207,7 @@
                                         <input name="e1Op1" id="e1Op2" value="2" type="radio">
                                     </td>
                                     <td id="e3">
-                                        <input name="e1Op1" id="e1Op3" value="3" type="radio">
+                                        <input name="e1Op1" id="e1Op3" class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e4">
                                         <input name="e1Op1" id="e1Op4" value="4" type="radio">
@@ -1226,7 +1226,7 @@
                                         <input name="e1Op2" id="e1Op7" value="2" type="radio">
                                     </td>
                                     <td id="e8">
-                                        <input name="e1Op2" id="e1Op8" value="3" type="radio">
+                                        <input name="e1Op2" id="e1Op8"  class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e9">
                                         <input name="e1Op2" id="e1Op9" value="4" type="radio">
@@ -1245,7 +1245,7 @@
                                         <input name="e1Op3" id="e1Op12" value="2" type="radio">
                                     </td>
                                     <td id="e13">
-                                        <input name="e1Op3" id="e1Op13" value="3" type="radio">
+                                        <input name="e1Op3" id="e1Op13" class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e14">
                                         <input name="e1Op3" id="e1Op14" value="4" type="radio">
@@ -1284,7 +1284,7 @@
                                         <input name="e1Op4" id="e1Op17" value="2" type="radio">
                                     </td>
                                     <td id="e18">
-                                        <input name="e1Op4" id="e1Op18" value="3" type="radio">
+                                        <input name="e1Op4" id="e1Op18" class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e19">
                                         <input name="e1Op4" id="e1Op19" value="4" type="radio">
@@ -1303,7 +1303,7 @@
                                         <input name="e1Op5" id="e1Op22" value="2" type="radio">
                                     </td>
                                     <td id="e23">
-                                        <input name="e1Op5" id="e1Op23" value="3" type="radio">
+                                        <input name="e1Op5" id="e1Op23" class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e24">
                                         <input name="e1Op5" id="e1Op24" value="4" type="radio">
@@ -1322,7 +1322,7 @@
                                         <input name="e1Op6" id="e1Op27" value="2" type="radio">
                                     </td>
                                     <td id="e28">
-                                        <input name="e1Op6" id="e1Op28" value="3" type="radio">
+                                        <input name="e1Op6" id="e1Op28" class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e29">
                                         <input name="e1Op6" id="e1Op29" value="4" type="radio">
@@ -1341,7 +1341,7 @@
                                         <input name="e1Op7" id="e1Op32" value="2" type="radio">
                                     </td>
                                     <td id="e33">
-                                        <input name="e1Op7" id="e1Op33" value="3" type="radio">
+                                        <input name="e1Op7" id="e1Op33" class="eTh" value="3" type="radio">
                                     </td>  
                                     <td id="e34">
                                         <input name="e1Op7" id="e1Op34" value="4" type="radio">
@@ -1379,10 +1379,10 @@
                                     <th>(a)</th>
                                     <td>Serious physical assault (for example, beaten up or mugged)</td>
                                     <td id="e36">
-                                        <input name="e2Op1" id="e2Op1" value="1" type="radio">
+                                        <input name="e2Op1" id="e2Op1" class="e2Th" value="1" type="radio">
                                     </td>
                                     <td id="e37">
-                                        <input name="e2Op1" id="e2Op2" value="2" type="radio">
+                                        <input name="e2Op1" id="e2Op2" class="e2Th" value="2" type="radio">
                                     </td>
                                     <td id="e38">
                                         <input name="e2Op1" id="e2Op3" value="3" type="radio">
@@ -1398,10 +1398,10 @@
                                     <th>(b)</th>
                                     <td>Sexual assault or rape</td>
                                     <td id="e41">
-                                        <input name="e2Op2" id="e2Op6" value="1" type="radio">
+                                        <input name="e2Op2" id="e2Op6" class="e2Th" value="1" type="radio">
                                     </td>
                                     <td id="e42">
-                                        <input name="e2Op2" id="e2Op7" value="2" type="radio">
+                                        <input name="e2Op2" id="e2Op7" class="e2Th" value="2" type="radio">
                                     </td>
                                     <td id="e43">
                                         <input name="e2Op2" id="e2Op8" value="3" type="radio">
@@ -1417,10 +1417,10 @@
                                     <th>(c)</th>
                                     <td>You witnessed someone else being badly beaten or killed</td>
                                     <td id="e46">
-                                        <input name="e2Op3" id="e2Op11" value="1" type="radio">
+                                        <input name="e2Op3" id="e2Op11" class="e2Th" value="1" type="radio">
                                     </td>
                                     <td id="e47">
-                                        <input name="e2Op3" id="e2Op12" value="2" type="radio">
+                                        <input name="e2Op3" id="e2Op12" class="e2Th" value="2" type="radio">
                                     </td>
                                     <td id="e48">
                                         <input name="e2Op3" id="e2Op13" value="3" type="radio">
@@ -1858,7 +1858,7 @@
                     <div id="navSpc2" data-role="navbar">
                         <ul>
                             <li></li>
-                            <li><a id="fBack2" onclick="back2()" class="ui-btn ui-icon-carat-l ui-btn-icon-left">Back</a></li>
+                            <li><a id="fBack2" onclick="back()" class="ui-btn ui-icon-carat-l ui-btn-icon-left">Back</a></li>
                             <li><a id="fwrd2" onclick="forward2()" class="ui-btn ui-icon-carat-r ui-btn-icon-right">Forward</a></li>   
                         </ul>
                     </div>
@@ -1869,6 +1869,13 @@
                     <div id="dataDiv">                        
                     </div>
                     <a id="sdb" onclick="reset()" href="#home" class="ui-btn ui-corner-all">Continue</a>
+                </div>
+            </div>
+            <div data-role="page" id="s2Data" data-theme="a">
+                <div data-role="content">
+                    <div id="data2Div">                        
+                    </div>
+                    <a id="sdb2" onclick="reset()" href="#home" class="ui-btn ui-corner-all">Continue</a>
                 </div>
             </div>
             <div data-role="page" id="sst" data-theme="a">
